2000-07-19  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-ps.el (mhc-ps-preview-command-arguments): Change default value.
	(mhc-ps-paper-fill-print): New variable.
	(mhc-ps/replace-table): Use mhc-ps-paper-fill-print.
	(mhc-ps/process): Use expand-file-name()
	, when finename cons mhc-ps/process-file-alist.

2000-07-18  Yoshinari Nomura  <nom@quickhack.net>

	* mhc2palm.in: separate -v and -n.

	* ruby-ext/lib/mhc-schedule.rb (MhcScheduleItem#to_palm):
	support 1st 3rd Tue.

	* mhc2palm.in: add verbose mode -v.

	* emacs/mhc.el:
	Use (mhc-face-get-today-face) instead of (mhc-face-get-gray-face).
	Use (mhc-face-get-busy-face)  instead of (mhc-face-get-underline-face).

	* emacs/mhc-summary.el:
	Use (mhc-face-get-busy-face) instead of (mhc-face-get-gray-face).

	* emacs/mhc-face.el:
	(mhc-face-get-gray-face), (mhc-face-get-underline-face): Deleted.
	(mhc-face-get-busy-face), (mhc-face-get-today-face): New functions.
	mhc-face-effect-alist: New variable.

2000-07-18  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-mode-menu-spec): Add PostScript menu.
	(mhc-setup): Autoload mhc-ps-save and mhc-ps-insert-buffer.

	* emacs/mhc-ps.el (mhc-ps-string-column): New variable, 
	but not used ^^;
	(mhc-ps/string): Fix 'Sixth week' problem.
	(mhc-ps/replace-table): Ditto.
	(mhc-ps/weeks): New function, return number of weeks.
	(mhc-ps/compose-subject): Change method for truncate and fill.
	(mhc-ps/make-contents): Add 'file' option. 
	(mhc-ps/process): New function, modified mhc-ps/start-process.
	(mhc-ps/process-sentinel): New function for delete PS file.
	(mhc-ps-preview): Support Win32 enviroment.
	(mhc-ps-print): Ditto.
	(mhc-ps-save): New function.
	(mhc-ps-insert-buffer): Ditto.

2000-07-18  Yoshinari Nomura  <nom@quickhack.net>

	* configure.rb: more simple error message.

	* emacs/mhc-cmail.el: New file.

	* emacs/mhc.el (mhc-current-date-month):
	  use local-variable mhc-summary-buffer-current-date-month
	  instead of buffer name.
